[package]
name = "rust-example"
version = "0.1.0"
authors = ["prestonTao <taopopoo@126.com>"]
edition = "2018"

[dependencies]
rand = "0.3.0"
time = "0.1.0"
hyper = "*"
futures = "0.3.5"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.22"

async-channel = "1.4.2"
async-executor = "1.1.0"
async-fs = "1.3.0"
async-io = "1.1.2"
async-lock = "2.1.3"
async-net = "1.4.3"
async-process = "1.0.0"
blocking = "1.0.0"
futures-lite = "1.7.0"
once_cell = "1.4.1"
async-dup = "1.2.2"
smol = "1.2.2"
tokio-util = "0.3.1"
tracing-subscriber = "0.2.12"


async-std = "1.7.0"
pnet = "0.27.2"
crossbeam-channel = "0.5"
rayon = "1.5"
parking_lot = "0.11.1"
num_cpus = "1.13.0"
async-trait = "0.1.50"

# bson = "0.2.0"
# mongodb = "0.1.4"